# pitchplease

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
pitchplease/: utils.py
pitchplease/models/FCPE/: model.py  modules.py
pitchplease/models/RMVPE/: constants.py  model.py  modules.py  spec.py
pitchplease/models/torchcrepe/: model.py
pitchplease/utils.py/: config.py
tests/: test_utils.py
tests/model/: test_FCPE.py  test_RMVPE.py  test_torchcrepe.py
