[project]
name = "pitchplease"
version = "0.1.0"
description = "A minimal package for when you have some audio and want to know the pitch – just remember to say please!"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "librosa>=0.10.2.post1",
    "local-attention>=1.11.1",
    "numpy>=2.1.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
]


[dependency-groups]
dev = ["pre-commit>=4.1.0", "pytest>=8.3.4"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "I", # isort
]
